app/assets/stylesheets/products.scss
// Place all the styles related to the Products controller here.
// They will automatically be included in application.css.
// You can use Sass (SCSS) here: http://sass-lang.com/

@import "mixins";
@import "variables";

.is-overflow-mobile {
  @media (max-width: 768px) {
    overflow: auto;
  }
}

.productTableContainer {
  width: 100%;
  overflow: auto;
}

.productTable {
  thead,
  tfoot {
    background-color: #CAAD73;
  }
  tfoot {
    td {
      padding: 0.5em 0;
    }
  }
  .button-card {
    @extend %button;
    background-color: #6f946d;
    background-image: asset-url('basket.svg');
    -webkit-background-size: 25px;
    background-size: 25px;
    background-position: 140px center;
    background-repeat: no-repeat;
    display: block;
    color: white;
    padding: 5px 60px 5px 50px;
  }
  .order_item_quantity {

  }

  tbody {
    td {
      width: 15%;
    }
  }

  &Cart {
    display: flex;
    align-items: center;
    .quantity {
      $size: 35px; //change this to change size of picker
      $border-radius: 3px; //set to 0 if not required
      display: inline-block;
      margin-right: 30px;
      position: relative;
      font-size: 0;
      overflow: hidden;
      border-radius: $border-radius;
      button {
        display: block;
        width: $size;
        height: $size;
        position: absolute;
        margin: 0;
        padding: 0;
        background: #fff;
        color: #000;
        font-size: ($size * 0.7);
        line-height: 1;
        cursor: pointer;
        //@include transition(color 200ms);
        &:focus {
          outline: none;
        }
        &:disabled {
          color: #ccc;
          cursor: default;
        }
        &:first-child {
          bottom: 0;
          border: 1px solid #d8d8d8;
          border-radius: 6px 0 0 6px;
          &:before {
            content: "-";
          }
        }
        &:last-child {
          border: 1px solid #d8d8d8;
          border-radius: 0 6px 6px 0;
          top: 0;
          &:before {
            content: "+";
          }
        }
      }
      input[type="number"] {
        position: absolute;
        width: 62px;
        height: $size;
        top: $size;
        margin: 0;
        border: solid #d8d8d8;
        border-width: 1px 0 1px 0;
        font-size: ($size * 0.4);
        font-weight: bold;
        text-align: center;
        -moz-appearance:textfield;
        &::-webkit-outer-spin-button,
        &::-webkit-inner-spin-button {
          -webkit-appearance: none;
          margin: 0;
        }
      }
      &.horiz {
        width: 132px;
        height: $size;
        button {
          &:first-child {
            left: 0;
          }
          &:last-child {
            right: 0;
          }
        }
        &:after {
          bottom: 0;
        }
        input[type="number"] {
          position: absolute;
          top: 0;
          left: $size;
        }
      }
    }
  }
}

.productCard {
  position: relative;
  display: block;
  margin: auto;
  border-radius: 5px;
  overflow: hidden;
  border: none;
  box-shadow: none;
  .card-content {
    position: absolute;
    bottom: 0;
    left: 0;
    right: 0;
    background-color: rgba(0,0,0,0.7);
    color: #ffffff;
    transition: padding-bottom 0.2s ease-out;
    &:hover {
      padding-bottom: 30px;
    }
    .title,
    .subtitle {
      color: #ffffff;
    }
  }
}

.quantity input {
  display: inline-block;
  width: 25px;
  height: 25px;
  padding: 0;
  margin: 0;
  text-align:center;
  background: #fff;
  border: 1px solid #ccc;
  border-right: none;
}

.quantity input:last-child {
  border-right: 1px solid #ccc;
}

input[type="button"] {
  cursor: pointer
}

.ask-question {
  display: block;
  padding: 10px 20px;
  max-width: max-content;
  width: 100%;
  margin: auto;
  background-color: $green;
  color: white;
  text-align: center;
  font-size: 1.125rem;
  cursor: pointer;
  border-radius: 7px;
  box-shadow: 0 0 20px -7px $green;
  transition: box-shadow .25s ease-in-out;
  &:hover {
    box-shadow: 0 0 20px -4px $green;
  }
}

